--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon -q server.js"
+    "dev": "node --watch server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -18,9 +18,6 @@
     "glob": "^11.0.0",
     "hbs": "^4.2.0",
     "node-schedule": "^2.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
   },
   "imports": {
     "#app/*": "./src/app/*",
